fix(devx): IOTAiota to iota

--- a/docs/content/developer/advanced/asset-tokenization.mdx
+++ b/docs/content/developer/advanced/asset-tokenization.mdx
@@ -709,7 +709,7 @@ Select a package for specific instructions.
 In a terminal or console at the `move/asset_tokenization` directory of the project enter:
 
 ```bash
-IOTAiota client publish
+iota client publish
 ```
 
 For the gas budget, use a standard value such as `20000000`.
@@ -717,7 +717,7 @@ For the gas budget, use a standard value such as `20000000`.
 The package should successfully deploy, and you then see:
 
 ```bash
-UPDATING GIT DEPENDENCY https://github.com/iotaledger/IOTAiota.git
+UPDATING GIT DEPENDENCY https://github.com/iotaledger/iota.git
 INCLUDING DEPENDENCY IOTA
 INCLUDING DEPENDENCY MoveStdlib
 BUILDING asset_tokenization
@@ -728,7 +728,7 @@ You can also view a multitude of information and transactional effects.
 
 You should choose and store the `package ID` and the `registry ID` from the created objects in the respective fields within your .env file.
 
-Afterward, it's necessary to modify the `Move.toml` file. Under the `[addresses]` section, replace `0x0` with the same `package ID`. Optionally, under the `[package]` section, add `published-at = <package ID>` (this step is not needed if you see a `Move.lock` file after running `IOTAiota client publish`).
+Afterward, it's necessary to modify the `Move.toml` file. Under the `[addresses]` section, replace `0x0` with the same `package ID`. Optionally, under the `[package]` section, add `published-at = <package ID>` (this step is not needed if you see a `Move.lock` file after running `iota client publish`).
 
 #### Automatically
 
@@ -753,7 +753,7 @@ For more details regarding this process, please consult the setup folder's [READ
 In a terminal or console at the `move/template` directory of the project enter:
 
 ```bash
-IOTAiota client publish
+iota client publish
 ```
 
 For the gas budget, use a standard value such as `20000000`.
@@ -761,7 +761,7 @@ For the gas budget, use a standard value such as `20000000`.
 The package should successfully deploy, and you then see:
 
 ```bash
-UPDATING GIT DEPENDENCY https://github.com/iotaledger/IOTAiota.git
+UPDATING GIT DEPENDENCY https://github.com/iotaledger/iota.git
 INCLUDING DEPENDENCY asset_tokenization
 INCLUDING DEPENDENCY IOTA
 INCLUDING DEPENDENCY MoveStdlib
@@ -778,7 +778,7 @@ You should choose and store the `package ID`, asset `metadata ID`, `asset cap ID
 The process of automatic deployment for the template package refers to publishing a new asset via the WASM library. Quick start steps:
 
 - Ensure that the `asset_tokenization` package address is set in the `[addresses]` section of `asset_tokenization/Move.toml`. This address should be the same as the original package deployment.
-- If a `Move.lock` file exists after running`IOTAiota client publish`, go on to the next step. If not, ensure that the `asset_tokenization/Move.toml` file has its `published-at` field uncommented and populated with the address of the latest package deployment.
+- If a `Move.lock` file exists after running`iota client publish`, go on to the next step. If not, ensure that the `asset_tokenization/Move.toml` file has its `published-at` field uncommented and populated with the address of the latest package deployment.
 - Make any changes to the template fields by changing the input parameters of the `publishNewAsset` function.
 - Run `npm run publish-template`.
 - You should choose and store the _Template Package ID_, _asset metadata ID_, _asset cap ID_ and the _publisher ID_ from the created objects in the respective fields within your **.env** file.
@@ -793,7 +793,7 @@ For more details regarding this process, please consult the setup folder's [READ
 
 :::tip
 
-You can find a public facing reference to the WASM library in the [move-binary-format-wasm](https://github.com/iotaledger/IOTAiota/tree/main/sdk/move-binary-format-wasm) IOTA repo subfolder.
+You can find a public facing reference to the WASM library in the [move-binary-format-wasm](https://github.com/iotaledger/iota/tree/main/sdk/move-binary-format-wasm) IOTA repo subfolder.
 
 :::
 
