feat(devx): add wallet link

--- a/docs/content/about-iota/iota-wallet/getting-started.mdx
+++ b/docs/content/about-iota/iota-wallet/getting-started.mdx
@@ -17,7 +17,7 @@ Create new addresses to handle coins, tokens, and NFTs.
 
 ## Installing the IOTA Wallet
 
-1. Open a Chromium-based browser and visit the [IOTA Wallet page](#TODO ADD LINK) in the Chrome Web Store.
+1. Open a Chromium-based browser and visit the [IOTA Wallet page](https://chromewebstore.google.com/detail/iota-wallet-rc/nlmllpflpelpannpijhhnbhekpbpejch) in the Chrome Web Store.
 2. Click the **Add to Chrome** button to install the wallet extension.
 3. Approve the permissions for the extension and confirm by selecting **Add Extension**.
 4. Once installed, you’ll see the IOTA Wallet icon in your browser, signaling that it's ready for use.
