--- a/docs/content/developer/getting-started/get-address.mdx
+++ b/docs/content/developer/getting-started/get-address.mdx
@@ -86,7 +86,7 @@ Open the Chrome IOTA Wallet browser extension and then:
 - Click **More Options** → **Create a new passphrase account**. Then, follow the on-screen instructions.
 
 For more information on the IOTA Wallet and how to keep it secure, see
-the [IOTA Wallet documentation](TODO CHECK LINK).
+the [IOTA Wallet documentation](../../about-iota/iota-wallet/getting-started.mdx).
 
 ### Command Line Interface
 
