feat(devx): remove TODP

--- a/docs/content/about-iota/iota-wallet/getting-started.mdx
+++ b/docs/content/about-iota/iota-wallet/getting-started.mdx
@@ -8,7 +8,7 @@ The IOTA Wallet offers an easy-to-use platform for managing your digital assets 
 
 * **Set up IOTA profiles and accounts**:  
 Create new addresses to handle coins, tokens, and NFTs.
-* **Import private keys:** Transfer assets seamlessly from other wallets using a 32 or 64-byte address. (TODO CONFIRM)
+* **Import private keys:** Transfer assets seamlessly from other wallets using a 32 or 64-byte address.
 * **Stake and earn IOTA:** Secure the network through staking while earning rewards.
 * **Transfer assets:** Send coins and NFTs easily to another address with a user-friendly interface.
 * **Monitor your assets:** View your coins, tokens, and NFTs in one place for a complete overview.
