feat(devx): incorporte feedback

--- a/docs/content/about-iota/iota-wallet/how-to/basics.mdx
+++ b/docs/content/about-iota/iota-wallet/how-to/basics.mdx
@@ -75,7 +75,7 @@ For added security, you can set your wallet to automatically lock after a specif
 
 If you forget your wallet password, you can reset it using your mnemonic recovery phrase:
 
-1. On the login screen, click `Forgot password?`.
+1. On the unlock screen, click `Forgot password?`.
 
    ![Forgot Password](/img/about-iota/iota-wallet/how-to/basics/forgot-password.png)
 
@@ -93,7 +93,7 @@ To manage the apps connected to your IOTA Wallet:
 
 ### Access Active Connections
 
-1. Go to the `Apps` tab and switch to the `Active Connections` view to see a list of all connected apps.
+1. Go to the `Active Connections` view to see a list of all connected apps.
 
 ### Visit App Websites
 
