--- a/docs/content/about-iota/iota-wallet/how-to/multi-account.mdx
+++ b/docs/content/about-iota/iota-wallet/how-to/multi-account.mdx
@@ -8,7 +8,7 @@ IOTA Wallet allows you to use multiple profiles and accounts, offering flexibili
 
 :::tip Profiles vs. Accounts
 
-A profile is a collection of accounts that share the same wallet password.
+A profile is a collection of accounts.
 
 :::
 
