feat(devx): add todo

--- a/docs/content/about-iota/iota-wallet/how-to/get-test-tokens.mdx
+++ b/docs/content/about-iota/iota-wallet/how-to/get-test-tokens.mdx
@@ -29,7 +29,7 @@ When you first open the wallet, it will have no coins. You can add test IOTA coi
 3. Click `Request Devnet IOTA tokens` or `Request Testnet IOTA tokens`, based on the network you're using.
 4. Once tokens are in your wallet, the button to request more will move to the `Settings` page. Access it by clicking the cog icon in the top-right corner of the wallet interface.
 
-:::note Limits
+:::note Limits (TODO CONFIRM)
 
 You can request test IOTA tokens only once every 60 minutes. After requesting, the tokens will appear in your wallet under the `Coins` tab.
 
