fixup! fix: replace reference to iota-test-validator

--- a/docs/content/references/ts-sdk/typescript/iota-client.mdx
+++ b/docs/content/references/ts-sdk/typescript/iota-client.mdx
@@ -34,7 +34,7 @@ during development. In a production application, however, you should use the
 -   `testnet`
 -   `mainnet`
 
-For local development, you can run `cargo run --bin iota -- start --with-faucet --force-regenesis` to
+For local development, you can run `cargo run --bin iota start --with-faucet --force-regenesis` to
 spin up a local network with a local validator, a Full node, and a faucet server. Refer to
 [the Local Network guide](../../../developer/getting-started/local-network.mdx) for
 more information.
