fix(devx): fix links

--- a/docs/content/developer/iota-101/objects/object-ownership/immutable.mdx
+++ b/docs/content/developer/iota-101/objects/object-ownership/immutable.mdx
@@ -12,7 +12,7 @@ Once an object is made immutable, it has no owner, making it accessible to anyon
 ### Using `public_freeze_object`
 
 To make an object immutable,
-use the [`transfer::public_freeze_object`](../../../../references/framework/iota-framework/transfer.mdx#function-public_freeze_object) function:
+use the [`transfer::public_freeze_object`](../../../../references/framework/iota-framework/transfer#function-public_freeze_object) function:
 
 ```move
 public native fun public_freeze_object<T: key>(obj: T);
