--- a/docs/content/references/ts-sdk/typescript/transaction-building/basics.mdx
+++ b/docs/content/references/ts-sdk/typescript/transaction-building/basics.mdx
@@ -62,7 +62,7 @@ may not be immediately observable.
 There are 2 ways to observe the results of a transaction. Methods like
 `client.signAndExecuteTransaction` accept an `options` object with options like `showObjectChanges`
 and `showBalanceChanges` (see
-[the IotaClient docs for more details](/typescript/iota-client#arguments)). These options will cause
+[the IotaClient docs for more details](../iota-client.mdx#arguments)). These options will cause
 the request to contain additional details about the effects of the transaction that can be
 immediately displayed to the user, or used for further processing in your application.
 
