--- a/docs/content/references/ts-sdk/typescript/transaction-building/intents.mdx
+++ b/docs/content/references/ts-sdk/typescript/transaction-building/intents.mdx
@@ -1,6 +1,6 @@
 # Transaction Intents
 
-Transaction Intents enable 3rd party SDKs and [Transaction Plugins](../plugins) to more easily add
+Transaction Intents enable 3rd party SDKs and Transaction Plugins to more easily add
 complex operations to a Transaction. The Typescript SDK currently only includes a single Intent
 (CoinWithBalance), but more will be added in the future.
 
