Fix missing broken link

--- a/docs/content/developer/iota-101/move-overview/package-upgrades/automated-address-management.mdx
+++ b/docs/content/developer/iota-101/move-overview/package-upgrades/automated-address-management.mdx
@@ -47,7 +47,7 @@ Your package is now tracked. You can repeat the above steps to track addresses f
 
 - When [upgrading](./upgrade#upgrade-requirements), you need to retrieve the `UpgradeCap` ID of your published package. Automated address management does not track your `UpgradeCap`.
 
-- When [upgrading](./upgrade#example), you first need to set the `[addresses]` value for your package to `0x0` in the `Move.toml`, and restore its ID with the `ORIGINAL-ADDRESS` after upgrading.
+- When [upgrading](./upgrade.mdx#example-upgrading-an-iota_package), you first need to set the `[addresses]` value for your package to `0x0` in the `Move.toml`, and restore its ID with the `ORIGINAL-ADDRESS` after upgrading.
 
 ## Troubleshooting
 
